tests/syntax_error/string_continue_on_next_line.jou
import "stdlib/io.jou"

# Output: compiler error in file "tests/syntax_error/string_continue_on_next_line.jou", line 5: missing ' to end the byte literal
def main() -> int:
    a = '\
    't\''
    printf(a)
    return 0
